--- a/Exercise5/contact.html
+++ b/Exercise5/contact.html
@@ -87,7 +87,7 @@
                         </div>
 
                         <div class="forma-input">
-                            <input type="submit" value="Αποστολή" />
+                            <input type="submit" value="Αποστολή">
                         </div>
                     </form>
                 </div>
