--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -237,7 +237,7 @@
                         <label for="approveTerms">Αποδοχή των <a href="">Όρων και Προϋποθέσεων</a>.</label>
                         <p class="errorMsg" id="approveTermsError"></p>
 
-                        <input type="checkbox" id="subscribeNews" name="newsletter" value="subscribe" checked />
+                        <input type="checkbox" id="subscribeNews" name="newsletter" value="subscribe" checked >
                         <label for="subscribeNews">Εγγραφή στην εφημερίδα.</label>
                     </fieldset>
 
