--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -194,7 +194,7 @@
                         <p class="errorMsg" id="passwordsError"></p>
                     </fieldset>
 
-                    <fieldset id="contactMethod">
+                    <fieldset>
                         <legend>Επιλογές Επικοινωνίας</legend>
 
                         <label for="contactMethod">Τρόπος Πληρωμής:</label>
