need to see menu

--- a/Exercise5/about_us.html
+++ b/Exercise5/about_us.html
@@ -34,6 +34,11 @@
                     <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise5/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    
+                    <div class="deksia">
+                    <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ/ΣΥΝΔΕΣΗ</a>
+                    </div>
+                   
                 </nav>
 
             </header>
