--- a/Exercise5/contact.html
+++ b/Exercise5/contact.html
@@ -34,6 +34,10 @@
                     <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise5/contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <div id="navigationRight">
+                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
+                    </div>
                 </nav>
             </header>
         </div>
