changes to all paradotea
need to change index in paradoteo 3 maybe

--- a/Exercise3/product-iphone14-pro-max.html
+++ b/Exercise3/product-iphone14-pro-max.html
@@ -38,10 +38,11 @@
 
                 <h3 id="category"> <a href="/Exercise3/products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
-                <h4 id="iphone-code">267271</h4>
-
-                <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo"
-                    alt="Apple iPhone 14 Pro Max">
+                
+                <div class="iphone-code-price">
+                    <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo" alt="Apple iPhone 14 Pro Max">
+                    <div id="iphone-price">267271 <br> €1549.00</div>
+                </div>
 
                 <section class="product-descr">
                     <div class="outer-box">
@@ -75,9 +76,7 @@
                     </div>
                 </section>
 
-                <div id="iphone">
-                    <p>€1549.00</p>
-                </div>
+               
 
                 <img src="/assets/analytiko.jpg" class="comparison"
                     alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
