--- a/Exercise3/stores.html
+++ b/Exercise3/stores.html
@@ -37,23 +37,11 @@
                 <h2>Τα καταστήματα Αθήνας</h2>
 
                 <div class="katasthmata">
-                    <section class="katasthma">
                         <h3>Κατάστημα Παγκρατίου</h3>
-
-                        <p><img src="/assets/pagrati.png" width="480" height="300"
-                                alt="Τοποθεσία καταστήματος Παγκρατίου">
-                            Φιλολάου 111, 166 33
-                        </p>
-                    </section>
-
-                    <section class="katasthma">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.6112744505836!2d23.744127115180003!3d37.962861579725626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd6e8ffb54cb%3A0x8f5e538b9bcc261c!2sFilolaou%20111%2C%20Athina%20116%2033!5e0!3m2!1sen!2sgr!4v1669379424973!5m2!1sen!2sgr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        
                         <h3>Κατάστημα Νέας Ιωνίας</h3>
-
-                        <p><img src="/assets/nea_ionia.png" width="480" height="300"
-                                alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
-                            Λεωφ. Ηρακλείου 225, 142 31
-                        </p>
-                    </section>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2109180409507!2d23.74817552707282!3d38.04217151481911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a271c1d0aec9%3A0xb08d63e09810e1e0!2sLeof.%20Irakliou%20225%2C%20Nea%20Ionia%20142%2031!5e0!3m2!1sen!2sgr!4v1669379560233!5m2!1sen!2sgr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </main>
         </div>
