--- a/Exercise5/about_us.html
+++ b/Exercise5/about_us.html
@@ -21,11 +21,9 @@
                 <a href="/Exercise5/index.html">
                     <img srcset="/assets/Technodata-logos_black_SR.png 600w,
                         /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w"
-                        sizes="(max-width: 600px) 80vw,
+                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px"
-                    src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
@@ -34,11 +32,10 @@
                     <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise5/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-                    
-                    <div class="deksia">
-                    <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ/ΣΥΝΔΕΣΗ</a>
+                    <div id="navigationRight">
+                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
+                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
                     </div>
-                   
                 </nav>
 
             </header>
@@ -49,49 +46,41 @@
                 <h2>Ποιοι είμαστε!</h2>
 
                 <section class="perilhpsh">
-                    <h3><img src="/assets/jimmy.png" id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος
-                        Παρασκευιώτης</h3>
+                    <h3>
+                        <img src="/assets/jimmy.png" id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">
+                        Δημήτριος Παρασκευιώτης
+                    </h3>
 
                     <p>
                         Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το
-                        Οικονομικό
-                        Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με
-                        τον
-                        συνιδρυτή του Technodata Αναστάσιο Μπουρτσουκλή.
+                        Οικονομικό Πανεπιστήμιο Αθηνών το 2023, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και
+                        γνωρίστηκε με τον συνιδρυτή του Technodata.
                         <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την
-                        εκμάθηση
-                        καίριων ικανοτήτων και ξένων γλωσσών.
+                        εκμάθηση καίριων ικανοτήτων και ξένων γλωσσών.
                         <br>Απο μικρός δεν έκρυψε το πάθος για αθλήματα, όπως το μπάσκετ και η ξιφασκία, στα οποία
-                        εξακολουθεί
-                        να προπονείται και να παρακολουθεί.
+                        εξακολουθεί να προπονείται και να παρακολουθεί.
                     </p>
 
                     <h3>
-                        <img src="/assets/tasos1.png" id="tasos" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος
-                        Μπουρτσουκλής
+                        <img src="/assets/tasos1.png" id="tasos" alt="Φωτογραφία Τάσου Μπουρτσουκλή">
+                        Αναστάσιος Σπυρίδων Μπουρτσουκλής
                     </h3>
 
                     <p>
                         Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το
-                        τμήμα
-                        πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το
-                        front end
-                        development.
-                        <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του
-                        χρόνο
+                        τμήμα πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2023 και στην συνέχεια ασχολήθηκε με
+                        το front end development.
+                        <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και στον ελευθερό του χρόνο
                         ασχολείται με τον μηχανοκίνητο αθλητισμό και το χόμπι του για αμάξια.
                     </p>
                 </section>
 
                 <p id="synexeia-perilhpshs">
                     Οι δρόμοι τους θα συναντηθούν ξανα το 2022, όπου αποφάσισαν να αφήσουν τις θέσεις τους στις
-                    εταιρείες που
-                    εργαζόντουσαν και να ιδρύσουν το Technodata.
+                    εταιρείες που εργαζόντουσαν και να ιδρύσουν το Technodata.
                     <br>Πλέον, έχοντας περισσότερα απο 15 καταστήματα σε Ελλάδα και Κύπρο, ο όμιλος Technodata προσφέρει
-                    μια
-                    ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και τιμές
-                    της
-                    αγοράς.
+                    μια ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και
+                    τιμές της αγοράς.
                 </p>
             </main>
         </div>
