--- a/Exercise5/product-categories.html
+++ b/Exercise5/product-categories.html
@@ -20,11 +20,9 @@
                 <a href="/Exercise5/index.html">
                     <img srcset="/assets/Technodata-logos_black_SR.png 600w,
                         /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w"
-                        sizes="(max-width: 600px) 80vw,
+                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px"
-                    src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
@@ -34,8 +32,8 @@
                     <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                     <div id="navigationRight">
-                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
                         <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
+                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
                     </div>
                 </nav>
             </header>
