--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -34,7 +34,7 @@
                     <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                     <div id="navigationRight">
                         <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
-                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="/Exercise5/sign_up.html" class="active">ΕΓΓΡΑΦΗ</a>
                     </div>
                 </nav>
             </header>
